# dnn_infer

./: CMakeLists.txt  readme.md
inc/: dnn.hpp
src/: dnn.cpp  main.cpp
